src/tests/testfiles/variable-declarations/2.txt
testfiles/variable-declarations/2.c:3:7: error: Identifier a already taken by variable
int a;
    ^
